# MIMO

./: .gitignore  README.md
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mimo/android/: BaseApplication.kt  MainActivity.kt  MimoApp.kt
android/app/src/main/java/com/mimo/android/apis/: MainActivity.kt  interface.kt
android/app/src/main/java/com/mimo/android/components/: BackgroundImage.kt  BottomTwoButtons.kt  Button.kt  ButtonSmall.kt  CardType.kt  Clock.kt  FunnelInput.kt  HeadingLarge.kt  HeadingSmall.kt  HorizontalDivider.kt  HorizontalScroll.kt  Icon.kt  LinearProgressbar.kt  Logo.kt  Modal.kt  ScrollView.kt  SimpleCalendar.kt  Text.kt  TimePicker.kt  Timer.kt  TransparentCard.kt
android/app/src/main/java/com/mimo/android/utils/: main.kt
android/app/src/main/java/com/mimo/android/viewmodels/: AuthViewModel.kt  FirstSettingFunnelsViewModel.kt  MyHouseCurtainViewModel.kt  MyHouseDetailViewModel.kt  MyHouseHubListViewModel.kt  MyHouseLampViewModel.kt  MyHouseLightViewModel.kt  MyHouseViewModel.kt  MyHouseWindowViewModel.kt  MyProfileViewModel.kt  QrCodeViewModel.kt  SleepViewModel.kt
android/app/src/main/java/com/mimo/android/views/: Destination.kt  Drawer.kt  Router.kt
android/app/src/main/res/drawable/: gradient.xml
android/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .gitignore  Dockerfile  Jenkinsfile  build.gradle  docker-compose.yml  settings.gradle
backend/src/main/java/com/ssafy/mimo/: MimoApplication.java
backend/src/main/java/com/ssafy/mimo/common/: BaseDeletableEntity.java  BaseDeviceEntity.java  BaseEntity.java  BaseUnregisterableEntity.java  DeviceDefaults.java  SleepLevel.java
backend/src/main/java/com/ssafy/mimo/config/: SwaggerConfig.java
backend/src/main/java/com/ssafy/mimo/healthchecker/: HealthCheckerController.java
backend/src/main/java/com/ssafy/mimo/sleep/controller/: SleepDataController.java
backend/src/main/java/com/ssafy/mimo/sleep/dto/: SleepDataDto.java
backend/src/main/java/com/ssafy/mimo/sleep/entity/: SleepData.java
backend/src/main/java/com/ssafy/mimo/sleep/repository/: SleepDataRepository.java
backend/src/main/java/com/ssafy/mimo/sleep/service/: DeviceHandlerService.java  SleepDataService.java  SleepHandleDeviceService.java
backend/src/main/java/com/ssafy/mimo/socket/global/: MessageReader.java  MessageWriter.java  MyApplicationContextAware.java  SocketController.java  SocketServerRunner.java  SocketService.java
backend/src/main/java/com/ssafy/mimo/user/config/: WebSecurityConfig.java  WebclientConfig.java
backend/src/main/resources/: application.yml
backend/src/test/java/com/ssafy/mimo/: MimoApplicationTests.java
deploy/db_dev/: .env.example  docker-compose.yml
deploy/db_ops/: docker-compose.yml
deploy/jenkins/: .env.example  Dockerfile.agent  Dockerfile.master  docker-compose.yml
deploy/nginx/: .env.example  Dockerfile  docker-compose.yml  http.conf.template  nginx.conf  stream.conf.template  switch.sh
embedded/curtain/: curtain.ino
embedded/hub/: CMakeLists.txt  ble.cpp  common.cpp  execute.sh  main.cpp  make.sh  socket.cpp
embedded/hub/includes/: ble.hpp  common.hpp  socket.hpp
embedded/hub/lib-bluez/: CMakeLists.txt
embedded/lamp/: lamp.ino
embedded/light/: light.ino
embedded/window/: window.ino
(+193 files in other folders)
